[gd_scene format=4 uid="uid://btpe1nrboepgg"]

[ext_resource type="Theme" uid="uid://b11dr1iiq0j81" path="res://ui/themes/menu_theme.tres" id="1_qmweu"]
[ext_resource type="Script" uid="uid://dcjlrw1qirmky" path="res://scenes/main_menu/main_menu.gd" id="2_wckin"]
[ext_resource type="Shader" uid="uid://f8yvg6myrvqc" path="res://shaders/waves.gdshader" id="3_f1mbi"]
[ext_resource type="Texture2D" uid="uid://brk285ka3ps33" path="res://art/icon.svg" id="3_xr86y"]
[ext_resource type="Shader" uid="uid://v6ds74mtnrnd" path="res://shaders/simple_blur.gdshader" id="4_oitky"]
[ext_resource type="AudioStream" uid="uid://cji82wy8pws7c" path="res://ui/sounds/switch11.ogg" id="6_oitky"]
[ext_resource type="AudioStream" uid="uid://day8c4dj3au5u" path="res://ui/sounds/question_002.ogg" id="7_wckin"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wckin"]
shader = ExtResource("3_f1mbi")
shader_parameter/bottom_color = Color(0, 0, 0, 1)
shader_parameter/top_color = Color(0.4333788, 0.7385096, 1.0775439, 1)
shader_parameter/wave_amp = 0.1590000075525
shader_parameter/wave_size = 1.0
shader_parameter/wave_time_mul = 0.30000001099011997
shader_parameter/total_phases = 7

[sub_resource type="ShaderMaterial" id="ShaderMaterial_arvcj"]
shader = ExtResource("4_oitky")
shader_parameter/strength = 6.90100032453762
shader_parameter/mix_percentage = 0.3

[sub_resource type="OggPacketSequence" id="OggPacketSequence_oitky"]
packet_data = Array[Array]([[PackedByteArray("AXZvcmJpcwAAAAACRKwAAAAAAAAA7gIAAAAAALgB")], [PackedByteArray("A3ZvcmJpczQAAABBTzsgYW9UdVYgWzIwMTEwNDI0XSAoYmFzZWQgb24gWGlwaC5PcmcncyBsaWJWb3JiaXMpAgAAAA0AAABBUlRJU1Q9S2VubmV5FQAAAENPTU1FTlQ9d3d3Lmtlbm5leS5ubAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=="), PackedByteArray("BXZvcmJpcytCQ1YBAAgAAAAxTCDFgNCQVQAAEAAAYCQpDpNmSSmllKEoeZiUSEkppZTFMImYlInFGGOMMcYYY4wxxhhjjCA0ZBUAAAQAgCgJjqPmSWrOOWcYJ45yoDlpTjinIAeKUeA5CcL1JmNuprSma27OKSUIDVkFAAACAEBIIYUUUkghhRRiiCGGGGKIIYcccsghp5xyCiqooIIKMsggg0wy6aSTTjrpqKOOOuootNBCCy200kpMMdVWY669Bl18c84555xzzjnnnHPOCUJDVgEAIAAABEIGGWQQQgghhRRSiCmmmHIKMsiA0JBVAAAgAIAAAAAAR5EUSbEUy7EczdEkT/IsURM10TNFU1RNVVVVVXVdV3Zl13Z113Z9WZiFW7h9WbiFW9iFXfeFYRiGYRiGYRiGYfh93/d93/d9IDRkFQAgAQCgIzmW4ymiIhqi4jmiA4SGrAIAZAAABAAgCZIiKZKjSaZmaq5pm7Zoq7Zty7Isy7IMhIasAgAAAQAEAAAAAACgaZqmaZqmaZqmaZqmaZqmaZqmaZpmWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWUBoyCoAQAIAQMdxHMdxJEVSJMdyLAcIDVkFAMgAAAgAQFIsxXI0R3M0x3M8x3M8R3REyZRMzfRMDwgNWQUAAAIACAAAAAAAQDEcxXEcydEkT1It03I1V3M913NN13VdV1VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVWB0JBVAAAEAAAhnWaWaoAIM5BhIDRkFQCAAAAAGKEIQwwIDVkFAAAEAACIoeQgmtCa8805DprloKkUm9PBiVSbJ7mpmJtzzjnnnGzOGeOcc84pypnFoJnQmnPOSQyapaCZ0JpzznkSmwetqdKac84Z55wOxhlhnHPOadKaB6nZWJtzzlnQmuaouRSbc86JlJsntblUm3POOeecc84555xzzqlenM7BOeGcc86J2ptruQldnHPO+WSc7s0J4ZxzzjnnnHPOOeecc84JQkNWAQBAAAAEYdgYxp2CIH2OBmIUIaYhkx50jw6ToDHIKaQejY5GSqmDUFIZJ6V0gtCQVQAAIAAAhBBSSCGFFFJIIYUUUkghhhhiiCGnnHIKKqikkooqyiizzDLLLLPMMsusw84667DDEEMMMbTSSiw11VZjjbXmnnOuOUhrpbXWWiullFJKKaUgNGQVAAACAEAgZJBBBhmFFFJIIYaYcsopp6CCCggNWQUAAAIACAAAAPAkzxEd0REd0REd0REd0REdz/EcURIlURIl0TItUzM9VVRVV3ZtWZd127eFXdh139d939eNXxeGZVmWZVmWZVmWZVmWZVmWZQlCQ1YBACAAAABCCCGEFFJIIYWUYowxx5yDTkIJgdCQVQAAIACAAAAAAEdxFMeRHMmRJEuyJE3SLM3yNE/zNNETRVE0TVMVXdEVddMWZVM2XdM1ZdNVZdV2Zdm2ZVu3fVm2fd/3fd/3fd/3fd/3fd/XdSA0ZBUAIAEAoCM5kiIpkiI5juNIkgSEhqwCAGQAAAQAoCiO4jiOI0mSJFmSJnmWZ4maqZme6amiCoSGrAIAAAEABAAAAAAAoGiKp5iKp4iK54iOKImWaYmaqrmibMqu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67pAaMgqAEACAEBHciRHciRFUiRFciQHCA1ZBQDIAAAIAMAxHENSJMeyLE3zNE/zNNETPdEzPVV0RRcIDVkFAAACAAgAAAAAAMCQDEuxHM3RJFFSLdVSNdVSLVVUPVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVdU0TdM0gdCQlQAAGQAAAinFmoRQkkFOSuxFacYgB60G5SmEGJPYi+mYQshRUCpkDBnkQMnUMYYQ82JjpxRCzIvxpXOMQS/GuFJCKMEIQkNWBABRAAAGSSJJJEnyNKJI9CTNI4o8EYAkejyP50meyPN4HgBJFHkez5NEkefxPAEAAAEOAAABFkKhISsCgDgBAIskeR5J8jyS5Hk0TRQhipKmiSLPM02eZopMU1WhqpKmiSLPM02aJ5pMU1Whqp4oqipVdV2q6bpk27Zhy54oqipVdV2m6rps2bYh2wAAACRPU02aZpo0zTSJompCVSXNM1WaZpo0zTSJoqlCVT1TdF2m6bpM03W5rixDlj3RdF2mqbpM03W5rixDlgEAAEiep6o0zTRpmmkSRVOFakqep6o0zTRpmmkSRVWFqXqm6bpM03WZputyZVmGLXum6bpM03WZpuuSXVmGLAMAANBM05aJouwSRddlmq4L19VMU7aJoisTRddlmq4L1xVV1Zappi1TVVnmurIMWRZVVbaZqmxTVVnmurIMWQYAAAAAAAAAAICoqrZNVWWZasoy15VlyLKoqrZNVWWZqcoy17VlyLIAAIABBwCAABPKQKEhKwGAKAAAh+JYlqaJIsexLE0TTY5jWZpmiiRJ0zzPNKFZnmea0DRRVFVomiiqKgAAAgAAChwAAAJs0JRYHKDQkJUAQEgAgMNxLEvTPM/zRFE0TZPjWJbniaIomqZpqirHsSzPE0VRNE3TVFWWpWmeJ4qiaJqqqqrQNM8TRVE0TVVVVWiaKJqmaaqqqrouNE0UTdM0VVVVXRea5nmiaJqq6rquCzxPFE1TVV3XdQEAAAAAAAAAAAAAAAAAAAAABAAAHDgAAAQYQScZVRZhowkXHoBCQ1YEAFEAAIAxiDHFmFEKQiklNEpBCSWUCkJpqaSUSUittdYyKam11lolpbSWWsugpNZaa5mE1lprrQAAsAMHALADC6HQkJUAQB4AAIKMUow55xw1RinGnHOOGqMUY845R5VSyjnnIKSUKsWccw5SShlzzjnnKKWMOeecc5RS55xzzjlKqZTOOeccpVRK55xzjlIqJWPOOScAAKjAAQAgwEaRzQlGggoNWQkApAIAGBzHsjzP80zRNC1J0jRRFEXTVFVLkjRNFE1RNVWVZWmaKJqmqrouTdM0UTRNVXVdqup5pqmqruu6VFf0TFNVXVeWAQAAAAAAAAAAAAEA4AkOAEAFNqyOcFI0FlhoyEoAIAMAADEGIWQMQsgYhBRCCCmlEBIAADDgAAAQYEIZKDRkJQCQCgAAGKOUc85JSaVCiDHnIJTSUoUQY85BKKWlqDHGIJSSUmtRY4xBKCWl1qJrIZSSUkqtRddCKCWl1lqLUqpUSmqtxRilVKmU1lqLMUqpc0qtxRhjlFL3lFqLsdYopXQyxhhjrc0552SMMcZaCwBAaHAAADuwYXWEk6KxwEJDVgIAeQAACEJKMcYYYxAhpRhjzDGHkFKMMcYYVIoxxhxjDkLIGGOMMQchZIwx55yDEDLGGGPOQQidc44x5yCE0DnHmHMQQuecY8w5CKFzjDHmnAAAoAIHAIAAG0U2JxgJKjRkJQAQDgAAGMOYc4w5Bp2ECiHnIHQOQiqpVAg5B6FzEEpJqXgOOikhlFJKKsVzEEoJoZSUWisuhlJKKKWk1FKRMYRSSiklpdaKMaaEkFJKqbVWjDGhhFRSSim2YoyNpaTUWmutFWNsLCWV1lprrRhjjGsptRZjrMUYY1xLqaUYayzGGON7ai3GWGMxxhifW2opplwLADB5cACASrBxhpWks8LR4EJDVgIAuQEACEJKMcaYY84555xzzkmlGHPOOecghBBCCCGUSjHmnHPOQQchhBBCKBlzzjkHIYQQQgghhFBS6phzDkIIIYQQQgghpdQ55yCEEEIIIYQQQkqpc85BCCGEEEIIIYSUUgghhBBCCCGEEEIIKaWUQgghhBBCCCGUElJKKYUQQgglhBJKCCWklFIKIYQQQimlhFJCSSmlFEIIpZRQSimhlJBSSimlEEIopZRQSiklpZRSSiWUUkopJZRQSkoppZRKKKGUUEoppZSUUkoplVJKKSWUUkoJKaWUUkqplFJKKaWUUlJKKaWUUimllFJKKaWklFJKKaVSSimllBJKSSmllFJKpZRQSimllFJSSimllEoKpZRSSimlAACgAwcAgAAjKi3ETjOuPAJHFDJMQIWGrAQAUgEAAEIopZRSSik1jFFKKaWUUoocpJRSSimllFJKKaWUUkoplVJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSgHA3RcOgD4TNqyOcFI0FlhoyEoAIBUAADCGMcaYcs45pZRzzjkGnZRIKecgdE5KKT2EEEIInYSUegchhBBCKSn1GEMoIZSUUuuxhk46CKW01GsPIYSUWmqp9x4yqCilklLvPbVQUmopxt57SyWz0lprvefeSyopxtp67zm3klJMLRYAYBLhAIC4YMPqCCdFY4GFhqwCAGIAAAhDDEJIKaWUUkopxhhjjDHGGGOMMcYYY4wxxhhjjDEBAIAJDgAAAVawK7O0aqO4qZO86IPAJ3TEZmTIpVTM5ETQIzXUYiXYoRXc4AVgoSErAQAyAADEUaw1xl4rYhiEkmosDUGMQYm5ZcYo5STm1imllJNYU8iUUsxZiiV0TClGKaYSQsaUpBhjjCl00lrOPbdUSgsAAIAgAMBAhMwEAgVQYCADAA4QEqQAgMICQ8dwERCQS8goMCgcE85Jpw0AQBAiM0QiYjFITKgGiorpAGBxgSEfADI0NtIuLqDLABd0cdeBEIIQhCAWB1BAAg5OuOGJNzzhBifoFJU6EAAAAAAACAB4AABINoCIaGbmODo8PkBCREZISkxOUFJUBAAAAAAAEAA+AACSFSAimpk5jg6PD5AQkRGSEpMTlBSVAABAAAEAAAAAEEAAAgICAAAAAAABAAAAAgI=")], [PackedByteArray("5PQKMqjoL4Rtj690Ad1wvfivOu73GtkE0gc2igvb/xcPty3F1S6pi0sx8bbeust78vr5xf8fipil37qHmf3f+73zdGzu3+6ZZ8/29vZ9s7450xZfJjAL"), PackedByteArray("HPHowMhBUMeBn9QrnoB0WOAdx+q9MEvi2EsDqiV+N41N8ldcI1dE6Zq1rmYky6vny+U31641P2ffdZmwPPoz8dFLvMcT9eo3dAbsAoLFjyUA"), PackedByteArray("ZPGoSu2EWMFws3q+EzjbO9yp/OgQg+SJTUhg15mIeXkdpoxRcv18HTH5rwt2x4P9ifvtzL8eur4WUuPuhRbNB7IzD+01M3+BS1r5ZhI="), PackedByteArray("JPF8CajqBwI2aVdUAaCDW/7n7ZA9Nxn1xhQ7PuLwfFgUbcJ2e6mjRfsS5WPnf7LzXbVP9G+XnPYnHziF0v3hw5OmgU39Y1v5lPdabgY="), PackedByteArray("TPU8C6hUg1xnbOoVz6ypQGH+ca8ncEMsWVB0+uAvRXAXaOYU9V8qYrYwCrvH52yqHedw6Mur60LZ/zOa+jGHXqx7GD77ZW+LM82aPSenwb5c"), PackedByteArray("LPH0CQAq+E27ogYQVPCOb6ueGVsIJgRF7+B5mtQExvcTE24edUzRvJspr898y5j35/7E6bgRpEv7emg6DZLlJeuq6jZ/frqrVj0A"), PackedByteArray("PPF0hiyBmFgCvmhXkpUSmE6qTsd7uk8yk94LpYjVNmOx29YuzgtFzPXP07j+KMvN+of7g/M6szj2LITttpAf+pil6jW2x12rtw6naj036c+upwM="), PackedByteArray("LPn0ValB+skBRSYNGkW/km5HNeU9Rj1KE8f7rszLeAwPm/nBRwfLvVfx0Bjj588oepNe9aT0tAv6Vmt7a8Zq9BX3Fg8Urmh0sbn4zyCfGGMzox/CYhCrwE+E5fU9diSef12zbuIjr66Ea+W4P/neXS59NzfnZvz/89RzMXF50SYPnmZn6y+/fpXwpmvc/6+/vyuxS1/K61EC"), PackedByteArray("5A09s4FDyShbie7dUXT25hDyBho0m83bVNTeeaiKsqytPf1Lonb+JRP2OFZDvZTV5cSTRzkvCuUJ2S4nsiaOzWEek5GyjCKztrcfsfPrQ3p7q9Z9fMXRw03bec09q6F8wIGKT1M7qx0YZRQDkEzv0EkUBDHycvEkRUWcl/1FQ4pES0R3LrVr3L39HV0q4rNtottPs0qJ33fXDj9IdNSCt+hgcLGFK/xgRDjXdc1/+1Ecx39Ou3QTgtdwXPKolKsc+bus2wA="), PackedByteArray("vOUKs7TrGMDUVa7lSruhBVEsIlRGVq3tvVuZRT2zUy8eMSEEb9T++9SWOBM0q709F4jufafG7VLrHJyfcfbmN5/wzeMN74vrr+HVg8+Kk/jY/sKE3ZeLb47f2pWG5Td+W2W84p5Z/13cXbC/bf/VmZiCz7YDLA=="), PackedByteArray("uheEY3/MIt3OJqG2IL49IeknFvEzg0HYlsT/GrmIzEJOlKReHjh4IJUV2tTLvsr9QMcx9VTtqrnKQmeZJI7YAAAwaw7bzs5RI4i0eZx0H8EpbdJlEO3O2a71h3SVD1OUoNNhRtfei3pInME2pLfUqU+mN2IcNsv5dtXLnRNT/Pt1bmtO6b+RPVlYXVNUsGLu+3O5uVwvGW31q7eLg0O9JJCpsZq2Tjf91P/dPyaNKRMrvYjpuc/9qed6yUiZ33VMUTquLOn1V3EVsU7FwmRk9HSsfPj0uEUpk1u/1IsGwOgXVy5UaWkDTnlJx+4vva9FRkJM9P6NJpEb+1jgK8LxpSa1O8pLWZTOUr/cTkcWZW2N1dZPT4DbDcGSvh+7XtXTYTIBk8A76NRdiq3+AciwwkT6y6LDO1zPWsvlr14SAABI8FIA2J3q9R3DXEWpPYYvfFe73FMvDUVCmONbdbc/JQBP6czO1S0DPQukbJ7LwP8BiSPN+luu9r2dc87WXPfpqed4Adja6hcutrb+W6Fzt7JX5znlz3GcrZ6Jubmh+hc4Lj9w67M8zorHojF+ty8+8Cwyay5vpZyddGxt9eeRDgDUclvO5WOBLJCFra2tLQA="), PackedByteArray("Phd022nXPeVz6Qi1sZnmhGY7buWOBUKXs7cedLnH8egFukvl3u/X6KNf3dTQh18DJtfVnSK6qJ2pJMUkAQDAcpQLRUSIpIQc4u/+P7ZGD4W8uOlEvKKrP3sng8vVasA6u53la3XG6/JPtlWSZQJn9LrOPhfqsMe0+MR+lFwaMlxn5Vi066/ULa5vOZjTR6G6pLO6h+vM1V9RlAVlYbm+tt+sMApX7VaXDutI5Dpm/oqiFOa4IkFgLPw/7uIOZal6ndz379++f3saUwb93C5q03nuM7Uho/Z6bJxy6pdWxeN2JPHl9U0x/+88qf/9j19FrJaBcWUX6k0WvThex/JSijJKovUtB4lefU8nXG/N9NDTMFqqixS3hs/h0CtorH65fdAirKZHLLzT/OZFxw4/OFOHC0/VerDl99MTBmhSRiTtVlfClFNbA2G48fCcxI2Lrv5SQFvk9ABIelTn8dzbM7zN7d1KnWM/dD791T1h5a3AlMhoE+asVs+qHp2obs/mMoDlbe09z+Bp69nc3q3UzX3OFm/Bf7P1UgZ2AfBcVmyJMr/y45w2V3Fa3XzobZu2nq26VfJ5mZ+Tlg+eAAk4ZLDmHAA=")]])
granule_positions = PackedInt64Array(0, 0, 2528)
sampling_rate = 44100.0

[sub_resource type="AudioStreamOggVorbis" id="AudioStreamOggVorbis_wckin"]
packet_sequence = SubResource("OggPacketSequence_oitky")
tags = {
"artist": "Kenney",
"comment": "www.kenney.nl"
}

[node name="MainMenu" type="Control" unique_id=774946857]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qmweu")
script = ExtResource("2_wckin")

[node name="WaveEffect" type="ColorRect" parent="." unique_id=1973171771]
material = SubResource("ShaderMaterial_wckin")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurEffect" type="ColorRect" parent="." unique_id=368242758]
material = SubResource("ShaderMaterial_arvcj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1089011229]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -155.5
offset_right = 64.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Logo" type="TextureRect" parent="VBoxContainer" unique_id=1908473399]
layout_mode = 2
texture = ExtResource("3_xr86y")
stretch_mode = 3

[node name="Start" type="Button" parent="VBoxContainer" unique_id=1360169974]
layout_mode = 2
text = "Start Game"

[node name="Options" type="Button" parent="VBoxContainer" unique_id=1940003398]
layout_mode = 2
text = "Options"

[node name="Sounds" type="Node" parent="." unique_id=1704285860]

[node name="Hover" type="AudioStreamPlayer" parent="Sounds" unique_id=507876213]
unique_name_in_owner = true
stream = SubResource("AudioStreamOggVorbis_wckin")
max_polyphony = 4
bus = &"Sounds"

[node name="Click" type="AudioStreamPlayer" parent="Sounds" unique_id=134346095]
unique_name_in_owner = true
stream = ExtResource("6_oitky")
max_polyphony = 4
bus = &"Sounds"

[node name="StartGame" type="AudioStreamPlayer" parent="Sounds" unique_id=527631397]
unique_name_in_owner = true
stream = ExtResource("7_wckin")
volume_db = -5.0
bus = &"Sounds"

[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
